Parent-Child Menu behaves weird #41950

Closed
opened 2014-09-25 12:33:29 +02:00 by Sebastian Koenig · 11 comments

System Information
OSX 10.9.5, GTX 660ti

Blender Version
Broken: 2.72 RC
Worked: pretty sure this is broken forever, i remember seeing weird behavior here before

Short description of error
Assigning object B as parent to an object A via the parent field in object relations panel in properties editor behaves differently depending on if object A has been a child before or not. For a user it is totally unclear what happens.

Exact steps for others to reproduce the error
Open the attached file parent_child_bug.blend
Use the eyedropper tool or the text field to assign the object "parent" as parent to "ex-child" via the relations panel on the right side of the screen. The object stays in place.
Do the same with the object "new_child" and see how it uses the scale factors of the parent.
The only difference between the 2 objects is that i had parented "ex_child" to "parent" before through ctrl+p and cleared the parent after that by pressing the X in the parent selection field in the relations panel.

**System Information** OSX 10.9.5, GTX 660ti **Blender Version** Broken: 2.72 RC Worked: pretty sure this is broken forever, i remember seeing weird behavior here before **Short description of error** Assigning object B as parent to an object A via the parent field in object relations panel in properties editor behaves differently depending on if object A has been a child before or not. For a user it is totally unclear what happens. **Exact steps for others to reproduce the error** Open the attached file [parent_child_bug.blend](https://archive.blender.org/developer/F112336/parent_child_bug.blend) Use the eyedropper tool or the text field to assign the object "parent" as parent to "ex-child" via the relations panel on the right side of the screen. The object stays in place. Do the same with the object "new_child" and see how it uses the scale factors of the parent. The only difference between the 2 objects is that i had parented "ex_child" to "parent" before through ctrl+p and cleared the parent after that by pressing the X in the parent selection field in the relations panel.
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Campbell Barton was assigned by Sebastian Koenig 2014-09-25 12:33:29 +02:00
Author
Member

Added subscriber: @sebastian_k

Added subscriber: @sebastian_k

Added subscriber: @mont29

Added subscriber: @mont29

When you parent with ctrl-P, you are calling an operator which performs additional computation (namely, setting the inverse parent matrix), which allows child to keep its current transform. When you use the ID selector, you only affect the 'parent' property of the object, without touching any other data, like its inverse parent matrix…

No bug here, but agree from user POV this is not much understandable, so maybe we should make this field non-editable… But then, would not be much useful either. :/

When you parent with ctrl-P, you are calling an operator which performs additional computation (namely, setting the inverse parent matrix), which allows child to keep its current transform. When you use the ID selector, you only affect the 'parent' property of the object, without touching any other data, like its inverse parent matrix… No bug here, but agree from user POV this is not much understandable, so maybe we should make this field non-editable… But then, would not be much useful either. :/
Author
Member

Thanks for explaining.
I was suspecting something like that, but maybe this could be somehow exposed to the user? With some has-inverse-matrix info thingy or so? Because as it is now it's really totally obscure...
Maybe add to design to-dos and close this.

Thanks for explaining. I was suspecting something like that, but maybe this could be somehow exposed to the user? With some has-inverse-matrix info thingy or so? Because as it is now it's really totally obscure... Maybe add to design to-dos and close this.

This issue was referenced by b100bdca25

This issue was referenced by b100bdca25b15df16c1cd3261f8151b824eb8b19
Campbell Barton was unassigned by Bastien Montagne 2014-10-10 18:47:14 +02:00
Bastien Montagne self-assigned this 2014-10-10 18:47:14 +02:00

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Will just make it so that inverse parent matrix is reset every time you clear parenting ;)

Will just make it so that inverse parent matrix is reset every time you clear parenting ;)

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit b100bdca25.

Closed by commit b100bdca25.

This issue was referenced by 0763771e94

This issue was referenced by 0763771e94663c3245d0b99d749bf9771f291d98
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#41950
No description provided.